# payment-gateway-fraud-detection

./: .gitignore  Dockerfile  README.md  preparation.md  pyproject.toml
app/: metrics.py  model.py
backend/: train.py
backend/app/: main.py  metrics.py  model.py
k8s/: rollout.yaml
test/: test_api.py
